(library
   (name density)
   (libraries owl)
   (modules density))

(library
   (name types)
   (libraries owl)
   (modules types)) 

(library
   (name flow)
   (libraries types owl)
   (modules flow)) 
 
(library
   (name planar)
   (libraries owl density types)
   (modules planar))
 
(library
   (name sylvester)
   (libraries owl density types)
   (modules sylvester))
