(library
 (name potentials)
 (libraries owl)
 (modules potentials))

(library
 (name types)
 (libraries owl)
 (modules types))

(library
 (name flow)
 (libraries types owl)
 (modules flow))

(library
 (name planar)
 (libraries owl types)
 (modules planar))

(library
 (name sylvester)
 (libraries owl types)
 (modules sylvester))
